--- a/HTML/atari.html
+++ b/HTML/atari.html
@@ -57,7 +57,7 @@
   </div>
   <div class="footer">
     <a href="https://www.pascal.edu.it/"><img src="../immagini/LOGO-removebg-preview.png" width="250px"></a>
-    <p>© 2024 by Mattia Messori and Andrea Lugari. Powered and secured by Visual Studio Code</p>
+    <p>© 2024 by Mattia Messori, Andrea Lugari and Nassim Mimi. Powered and secured by Visual Studio Code</p>
   </div>
 </body>
 
